--- a/hwk3-task2-oil-spills.ipynb
+++ b/hwk3-task2-oil-spills.ipynb
@@ -87,10 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importing the libraries for this project\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt \n",
+    "import os \n",
+    "import geopandas as gpd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,11 +116,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Spill Number</th>\n",
+       "      <th>Program Facility Name</th>\n",
+       "      <th>Street 1</th>\n",
+       "      <th>Street 2</th>\n",
+       "      <th>Locality</th>\n",
+       "      <th>County</th>\n",
+       "      <th>ZIP Code</th>\n",
+       "      <th>SWIS Code</th>\n",
+       "      <th>DEC Region</th>\n",
+       "      <th>Spill Date</th>\n",
+       "      <th>Received Date</th>\n",
+       "      <th>Contributing Factor</th>\n",
+       "      <th>Waterbody</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Close Date</th>\n",
+       "      <th>Material Name</th>\n",
+       "      <th>Material Family</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Units</th>\n",
+       "      <th>Recovered</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>107132</td>\n",
+       "      <td>MH 864</td>\n",
+       "      <td>RT 119/MILLWOOD RD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ELMSFORD</td>\n",
+       "      <td>Westchester</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10/10/2001</td>\n",
+       "      <td>10/10/2001</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>10/15/2001</td>\n",
+       "      <td>unknown material</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Gallons</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>405586</td>\n",
+       "      <td>BOWRY BAY</td>\n",
+       "      <td>WATER POLL CONTROL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>QUEENS</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4101</td>\n",
+       "      <td>2</td>\n",
+       "      <td>08/21/2004</td>\n",
+       "      <td>08/21/2004</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>EAST RIVER</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>09/17/2004</td>\n",
+       "      <td>raw sewage</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>405586</td>\n",
+       "      <td>BOWRY BAY</td>\n",
+       "      <td>WATER POLL CONTROL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>QUEENS</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4101</td>\n",
+       "      <td>2</td>\n",
+       "      <td>08/21/2004</td>\n",
+       "      <td>08/21/2004</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>EAST RIVER</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>09/17/2004</td>\n",
+       "      <td>raw sewage</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Pounds</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>204667</td>\n",
+       "      <td>POLE 16091</td>\n",
+       "      <td>GRACE AVE/BURKE AVE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>301</td>\n",
+       "      <td>2</td>\n",
+       "      <td>08/02/2002</td>\n",
+       "      <td>08/02/2002</td>\n",
+       "      <td>Equipment Failure</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Commercial/Industrial</td>\n",
+       "      <td>10/28/2002</td>\n",
+       "      <td>transformer oil</td>\n",
+       "      <td>Petroleum</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Gallons</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>210559</td>\n",
+       "      <td>POLE ON</td>\n",
+       "      <td>FERDALE LOMIS RD / RT 52</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LIBERTY</td>\n",
+       "      <td>Sullivan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5336</td>\n",
+       "      <td>3</td>\n",
+       "      <td>01/20/2003</td>\n",
+       "      <td>01/20/2003</td>\n",
+       "      <td>Traffic Accident</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Commercial/Industrial</td>\n",
+       "      <td>01/22/2003</td>\n",
+       "      <td>transformer oil</td>\n",
+       "      <td>Petroleum</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Gallons</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Spill Number Program Facility Name                  Street 1 Street 2  \\\n",
+       "0        107132                MH 864        RT 119/MILLWOOD RD      NaN   \n",
+       "1        405586             BOWRY BAY        WATER POLL CONTROL      NaN   \n",
+       "2        405586             BOWRY BAY        WATER POLL CONTROL      NaN   \n",
+       "3        204667            POLE 16091       GRACE AVE/BURKE AVE      NaN   \n",
+       "4        210559               POLE ON  FERDALE LOMIS RD / RT 52      NaN   \n",
+       "\n",
+       "   Locality       County ZIP Code  SWIS Code  DEC Region  Spill Date  \\\n",
+       "0  ELMSFORD  Westchester      NaN       6000           3  10/10/2001   \n",
+       "1    QUEENS       Queens      NaN       4101           2  08/21/2004   \n",
+       "2    QUEENS       Queens      NaN       4101           2  08/21/2004   \n",
+       "3     BRONX        Bronx      NaN        301           2  08/02/2002   \n",
+       "4   LIBERTY     Sullivan      NaN       5336           3  01/20/2003   \n",
+       "\n",
+       "  Received Date Contributing Factor   Waterbody                 Source  \\\n",
+       "0    10/10/2001             Unknown         NaN                Unknown   \n",
+       "1    08/21/2004               Other  EAST RIVER                Unknown   \n",
+       "2    08/21/2004               Other  EAST RIVER                Unknown   \n",
+       "3    08/02/2002   Equipment Failure         NaN  Commercial/Industrial   \n",
+       "4    01/20/2003    Traffic Accident         NaN  Commercial/Industrial   \n",
+       "\n",
+       "   Close Date     Material Name Material Family  Quantity    Units  Recovered  \n",
+       "0  10/15/2001  unknown material           Other      10.0  Gallons        0.0  \n",
+       "1  09/17/2004        raw sewage           Other       0.0      NaN        0.0  \n",
+       "2  09/17/2004        raw sewage           Other       0.0   Pounds        0.0  \n",
+       "3  10/28/2002   transformer oil       Petroleum       1.0  Gallons        0.0  \n",
+       "4  01/22/2003   transformer oil       Petroleum       6.0  Gallons        6.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Importing the data as spills and counties\n",
+    "# Creating a variable called \"spills\" for the NY oil spill data\n",
+    "spills = pd.read_csv('data/Spill_Incidents_20241105.csv')\n",
+    "\n",
+    "# Looking at the first 5 rows of the data frame\n",
+    "spills.head()"
    ]
   },
   {
@@ -140,11 +354,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "DriverError",
+     "evalue": "data/tl_2023_us_county.shp: No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCPLE_OpenFailedError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[0;32mfiona/ogrext.pyx\u001b[0m in \u001b[0;36mfiona.ogrext.gdal_open_vector\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mfiona/_err.pyx\u001b[0m in \u001b[0;36mfiona._err.exc_wrap_pointer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mCPLE_OpenFailedError\u001b[0m: data/tl_2023_us_county.shp: No such file or directory",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mDriverError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_878030/3566991251.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Reading the file path to the counties shapefile and assigning it to a variable named \"counties\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcounties\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# Looking at the first 5 rows of the counties shapefile\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mcounties\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/python/3.7.13/lib/python3.7/site-packages/geopandas/io/file.py\u001b[0m in \u001b[0;36m_read_file\u001b[0;34m(filename, bbox, mask, rows, **kwargs)\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mfiona_env\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 201\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_or_bytes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    202\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m             \u001b[0;31m# In a future Fiona release the crs attribute of features will\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/python/3.7.13/lib/python3.7/site-packages/fiona/env.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwds)\u001b[0m\n\u001b[1;32m    455\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0menv_ctor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 457\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    458\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    459\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/python/3.7.13/lib/python3.7/site-packages/fiona/__init__.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, driver, schema, crs, encoding, layer, vfs, enabled_drivers, crs_wkt, allow_unsupported_drivers, **kwargs)\u001b[0m\n\u001b[1;32m    341\u001b[0m                 \u001b[0menabled_drivers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menabled_drivers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    342\u001b[0m                 \u001b[0mallow_unsupported_drivers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mallow_unsupported_drivers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 343\u001b[0;31m                 \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    344\u001b[0m             )\n\u001b[1;32m    345\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/python/3.7.13/lib/python3.7/site-packages/fiona/collection.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, mode, driver, schema, crs, encoding, layer, vsi, archive, enabled_drivers, crs_wkt, ignore_fields, ignore_geometry, include_fields, wkt_version, allow_unsupported_drivers, **kwargs)\u001b[0m\n\u001b[1;32m    232\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 234\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    235\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"a\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    236\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWritingSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mfiona/ogrext.pyx\u001b[0m in \u001b[0;36mfiona.ogrext.Session.start\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mfiona/ogrext.pyx\u001b[0m in \u001b[0;36mfiona.ogrext.gdal_open_vector\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mDriverError\u001b[0m: data/tl_2023_us_county.shp: No such file or directory"
+     ]
+    }
+   ],
    "source": [
-    "# a. Your code here\n"
+    "# a. Creating a file path for the county shape file with os\n",
+    "fp= os.path.join('data', 'tl_2023_us_county.shp')\n",
+    "fp\n",
+    "# Reading the file path to the counties shapefile and assigning it to a variable named \"counties\"\n",
+    "counties= gpd.read_file(fp)\n",
+    "# Looking at the first 5 rows of the counties shapefile \n",
+    "counties.head()\n"
    ]
   },
   {
@@ -694,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
