Add part 7 of workflow

--- a/hwk3-task2-oil-spills-Enda.ipynb
+++ b/hwk3-task2-oil-spills-Enda.ipynb
@@ -2264,11 +2264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Updating the 'St Lawrence' to 'St. Lawrence' in spills_per_county\n",
+    "spills_per_county['county']= spills_per_county['county'].replace('St Lawrence','St. Lawrence')\n",
+    "\n",
+    "# Using the assert function to see if any of the names in the county column still match \"St Lawrence\"\n",
+    "spill_county_names_new =spills_per_county['county'].unique()\n",
+    "\n",
+    "assert spill_county_names_new.any() != 'St Lawrence', \"Still St Lawrence\""
    ]
   },
   {
@@ -2286,20 +2294,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/python/3.7.13/lib/python3.7/site-packages/pandas/core/frame.py:5047: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  errors=errors,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['statefp', 'countyfp', 'countyns', 'geoid', 'geoidfq', 'county',\n",
+       "       'namelsad', 'lsad', 'classfp', 'mtfcc', 'csafp', 'cbsafp', 'metdivfp',\n",
+       "       'funcstat', 'aland', 'awater', 'intptlat', 'intptlon', 'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# a. Your code here\n"
+    "# a. Renaming the column 'name' to 'county' in the ny_counties data so we can join them\n",
+    "ny_counties.rename(columns={'name': 'county'}, inplace= True)\n",
+    "\n",
+    "# Checking to see if the 'name' column has been renamed\n",
+    "ny_counties.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# b. Your code here"
+    "# b. Over writing the ny_counties data to be the inner join of spills_per_county and old ny_counties\n",
+    "ny_counties = ny_counties.merge(spills_per_county, on='county', how='inner')"
    ]
   },
   {
@@ -2314,11 +2356,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>statefp</th>\n",
+       "      <th>countyfp</th>\n",
+       "      <th>countyns</th>\n",
+       "      <th>geoid</th>\n",
+       "      <th>geoidfq</th>\n",
+       "      <th>county</th>\n",
+       "      <th>namelsad</th>\n",
+       "      <th>lsad</th>\n",
+       "      <th>classfp</th>\n",
+       "      <th>mtfcc</th>\n",
+       "      <th>csafp</th>\n",
+       "      <th>cbsafp</th>\n",
+       "      <th>metdivfp</th>\n",
+       "      <th>funcstat</th>\n",
+       "      <th>aland</th>\n",
+       "      <th>awater</th>\n",
+       "      <th>intptlat</th>\n",
+       "      <th>intptlon</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>n_spills</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>36</td>\n",
+       "      <td>101</td>\n",
+       "      <td>00974148</td>\n",
+       "      <td>36101</td>\n",
+       "      <td>0500000US36101</td>\n",
+       "      <td>Steuben</td>\n",
+       "      <td>Steuben County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>236</td>\n",
+       "      <td>18500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>3601398422</td>\n",
+       "      <td>35039875</td>\n",
+       "      <td>+42.2667252</td>\n",
+       "      <td>-077.3855253</td>\n",
+       "      <td>POLYGON ((-77.08327 42.00002, -77.09391 41.999...</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36</td>\n",
+       "      <td>091</td>\n",
+       "      <td>00974143</td>\n",
+       "      <td>36091</td>\n",
+       "      <td>0500000US36091</td>\n",
+       "      <td>Saratoga</td>\n",
+       "      <td>Saratoga County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>104</td>\n",
+       "      <td>10580</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2097812305</td>\n",
+       "      <td>87488004</td>\n",
+       "      <td>+43.1061353</td>\n",
+       "      <td>-073.8553872</td>\n",
+       "      <td>POLYGON ((-73.67891 42.91221, -73.67938 42.911...</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36</td>\n",
+       "      <td>003</td>\n",
+       "      <td>00974100</td>\n",
+       "      <td>36003</td>\n",
+       "      <td>0500000US36003</td>\n",
+       "      <td>Allegany</td>\n",
+       "      <td>Allegany County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2666409356</td>\n",
+       "      <td>12990521</td>\n",
+       "      <td>+42.2478532</td>\n",
+       "      <td>-078.0261531</td>\n",
+       "      <td>POLYGON ((-78.04342 42.51846, -78.04326 42.518...</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36</td>\n",
+       "      <td>075</td>\n",
+       "      <td>00974136</td>\n",
+       "      <td>36075</td>\n",
+       "      <td>0500000US36075</td>\n",
+       "      <td>Oswego</td>\n",
+       "      <td>Oswego County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>532</td>\n",
+       "      <td>45060</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2464650884</td>\n",
+       "      <td>933469962</td>\n",
+       "      <td>+43.4614431</td>\n",
+       "      <td>-076.2092618</td>\n",
+       "      <td>POLYGON ((-76.02509 43.70702, -76.02004 43.706...</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>36</td>\n",
+       "      <td>111</td>\n",
+       "      <td>00974153</td>\n",
+       "      <td>36111</td>\n",
+       "      <td>0500000US36111</td>\n",
+       "      <td>Ulster</td>\n",
+       "      <td>Ulster County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>408</td>\n",
+       "      <td>28740</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2911757764</td>\n",
+       "      <td>94596810</td>\n",
+       "      <td>+41.9472124</td>\n",
+       "      <td>-074.2654582</td>\n",
+       "      <td>POLYGON ((-74.07480 42.09659, -74.06441 42.120...</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  statefp countyfp  countyns  geoid         geoidfq    county  \\\n",
+       "0      36      101  00974148  36101  0500000US36101   Steuben   \n",
+       "1      36      091  00974143  36091  0500000US36091  Saratoga   \n",
+       "2      36      003  00974100  36003  0500000US36003  Allegany   \n",
+       "3      36      075  00974136  36075  0500000US36075    Oswego   \n",
+       "4      36      111  00974153  36111  0500000US36111    Ulster   \n",
+       "\n",
+       "          namelsad lsad classfp  mtfcc csafp cbsafp metdivfp funcstat  \\\n",
+       "0   Steuben County   06      H1  G4020   236  18500      NaN        A   \n",
+       "1  Saratoga County   06      H1  G4020   104  10580      NaN        A   \n",
+       "2  Allegany County   06      H1  G4020   NaN    NaN      NaN        A   \n",
+       "3    Oswego County   06      H1  G4020   532  45060      NaN        A   \n",
+       "4    Ulster County   06      H1  G4020   408  28740      NaN        A   \n",
+       "\n",
+       "        aland     awater     intptlat      intptlon  \\\n",
+       "0  3601398422   35039875  +42.2667252  -077.3855253   \n",
+       "1  2097812305   87488004  +43.1061353  -073.8553872   \n",
+       "2  2666409356   12990521  +42.2478532  -078.0261531   \n",
+       "3  2464650884  933469962  +43.4614431  -076.2092618   \n",
+       "4  2911757764   94596810  +41.9472124  -074.2654582   \n",
+       "\n",
+       "                                            geometry  n_spills  \n",
+       "0  POLYGON ((-77.08327 42.00002, -77.09391 41.999...        72  \n",
+       "1  POLYGON ((-73.67891 42.91221, -73.67938 42.911...       160  \n",
+       "2  POLYGON ((-78.04342 42.51846, -78.04326 42.518...        30  \n",
+       "3  POLYGON ((-76.02509 43.70702, -76.02004 43.706...        68  \n",
+       "4  POLYGON ((-74.07480 42.09659, -74.06441 42.120...       160  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# c. Your code here"
+    "# Looking at the joined data set of ny_counties and spill_per_county\n",
+    "ny_counties.head()"
    ]
   },
   {
