Update part 7 of workflow'

--- a/hwk3-task2-oil-spills-Enda.ipynb
+++ b/hwk3-task2-oil-spills-Enda.ipynb
@@ -2565,6 +2565,215 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>statefp</th>\n",
+       "      <th>countyfp</th>\n",
+       "      <th>countyns</th>\n",
+       "      <th>geoid</th>\n",
+       "      <th>geoidfq</th>\n",
+       "      <th>county</th>\n",
+       "      <th>namelsad</th>\n",
+       "      <th>lsad</th>\n",
+       "      <th>classfp</th>\n",
+       "      <th>mtfcc</th>\n",
+       "      <th>csafp</th>\n",
+       "      <th>cbsafp</th>\n",
+       "      <th>metdivfp</th>\n",
+       "      <th>funcstat</th>\n",
+       "      <th>aland</th>\n",
+       "      <th>awater</th>\n",
+       "      <th>intptlat</th>\n",
+       "      <th>intptlon</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>n_spills</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>36</td>\n",
+       "      <td>063</td>\n",
+       "      <td>00974130</td>\n",
+       "      <td>36063</td>\n",
+       "      <td>0500000US36063</td>\n",
+       "      <td>Niagara</td>\n",
+       "      <td>Niagara County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>160</td>\n",
+       "      <td>15380</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1352876140</td>\n",
+       "      <td>1598772310</td>\n",
+       "      <td>+43.2726719</td>\n",
+       "      <td>-078.8129431</td>\n",
+       "      <td>POLYGON ((-78.49165 43.08396, -78.49179 43.084...</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   statefp countyfp  countyns  geoid         geoidfq   county        namelsad  \\\n",
+       "45      36      063  00974130  36063  0500000US36063  Niagara  Niagara County   \n",
+       "\n",
+       "   lsad classfp  mtfcc csafp cbsafp metdivfp funcstat       aland      awater  \\\n",
+       "45   06      H1  G4020   160  15380      NaN        A  1352876140  1598772310   \n",
+       "\n",
+       "       intptlat      intptlon  \\\n",
+       "45  +43.2726719  -078.8129431   \n",
+       "\n",
+       "                                             geometry  n_spills  \n",
+       "45  POLYGON ((-78.49165 43.08396, -78.49179 43.084...        88  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# c. Finding the current number of spills for Niagara county \n",
+    "Niagara_county =ny_counties[ny_counties['county']== 'Niagara']\n",
+    "Niagara_county"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>statefp</th>\n",
+       "      <th>countyfp</th>\n",
+       "      <th>countyns</th>\n",
+       "      <th>geoid</th>\n",
+       "      <th>geoidfq</th>\n",
+       "      <th>county</th>\n",
+       "      <th>namelsad</th>\n",
+       "      <th>lsad</th>\n",
+       "      <th>classfp</th>\n",
+       "      <th>mtfcc</th>\n",
+       "      <th>csafp</th>\n",
+       "      <th>cbsafp</th>\n",
+       "      <th>metdivfp</th>\n",
+       "      <th>funcstat</th>\n",
+       "      <th>aland</th>\n",
+       "      <th>awater</th>\n",
+       "      <th>intptlat</th>\n",
+       "      <th>intptlon</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>n_spills</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>36</td>\n",
+       "      <td>063</td>\n",
+       "      <td>00974130</td>\n",
+       "      <td>36063</td>\n",
+       "      <td>0500000US36063</td>\n",
+       "      <td>Niagara</td>\n",
+       "      <td>Niagara County</td>\n",
+       "      <td>06</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>G4020</td>\n",
+       "      <td>160</td>\n",
+       "      <td>15380</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1352876140</td>\n",
+       "      <td>1598772310</td>\n",
+       "      <td>+43.2726719</td>\n",
+       "      <td>-078.8129431</td>\n",
+       "      <td>POLYGON ((-78.49165 43.08396, -78.49179 43.084...</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   statefp countyfp  countyns  geoid         geoidfq   county        namelsad  \\\n",
+       "45      36      063  00974130  36063  0500000US36063  Niagara  Niagara County   \n",
+       "\n",
+       "   lsad classfp  mtfcc csafp cbsafp metdivfp funcstat       aland      awater  \\\n",
+       "45   06      H1  G4020   160  15380      NaN        A  1352876140  1598772310   \n",
+       "\n",
+       "       intptlat      intptlon  \\\n",
+       "45  +43.2726719  -078.8129431   \n",
+       "\n",
+       "                                             geometry  n_spills  \n",
+       "45  POLYGON ((-78.49165 43.08396, -78.49179 43.084...        89  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding one to the total number of spills for Niagara county\n",
+    "ny_counties.iloc[45, ny_counties.columns.get_loc('n_spills')] = 89\n",
+    "\n",
+    "# Checking to see if the above code worked\n",
+    "Niagara_county =ny_counties[ny_counties['county']== 'Niagara']\n",
+    "Niagara_county"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -2591,9 +2800,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "# a. Your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
