Change markdown answers to bullet points

--- a/hwk3-task2-oil-spills-Enda.ipynb
+++ b/hwk3-task2-oil-spills-Enda.ipynb
@@ -1790,13 +1790,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In part a, we viewed the first 5 rows/ observations of the data frame. This helps us to identify how many rows and columns there are, as well as give us a general idea of the column names and observations.\n",
+    "- In part a, we viewed the first 5 rows/ observations of the data frame. This helps us to identify how many rows and columns there are, as well as give us a general idea of the column names and observations.\n",
     "\n",
-    "In part b, we looked at the data types of the observations in each column (integer, object, float, etc.) This definitively tells us what the column names are, and tells us alot about the kinds of data being recorded in each one (for example, this geo-dataframe is mostly objects)\n",
+    "- In part b, we looked at the data types of the observations in each column (integer, object, float, etc.) This definitively tells us what the column names are, and tells us alot about the kinds of data being recorded in each one (for example, this geo-dataframe is mostly objects)\n",
     "\n",
-    "In part c, we looked at all the coordinate reference systems of the data (how the data is projected as a map and what it will look like)\n",
+    "- In part c, we looked at all the coordinate reference systems of the data (how the data is projected as a map and what it will look like)\n",
     "\n",
-    "In part d, we looked at the plot of the data to get a definitive idea of what the shape of the data looks like (in this specific example, what country, boundaries, and where the data points lie)."
+    "- In part d, we looked at the plot of the data to get a definitive idea of what the shape of the data looks like (in this specific example, what country, boundaries, and where the data points lie)."
    ]
   },
   {
@@ -2857,12 +2857,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- This choropleth map displays the number of petroleum oils spills by New York county, for the year 2023. The 3 counties with the most petroleum spills were Westchester, Suffolk, and Nassau, (in that order). "
+    "- This choropleth map displays the number of petroleum oils spills by New York county, for the year 2023. The 3 counties with the most petroleum spills were Westchester with 739, Suffolk with 720, and Nassau with 571.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {
     "tags": []
    },
@@ -2878,7 +2878,7 @@
        "Name: n_spills, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
